--- a/Portfolio/angular.json
+++ b/Portfolio/angular.json
@@ -97,8 +97,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a79dd866-829c-4976-a290-7d3ce71ee166"
   }
 }
